<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.caleballen.wikipod.HelpActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="@layout/activity_help"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:text="@string/welcome_to_wikipod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/wikipod_reads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/idea_for_wikipod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <View
            android:background="@color/light_gray"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            />

        <TextView
            android:textStyle="bold"
            android:text="HOW TO USE:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="4dp"
            android:text="@string/how_to_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <View
            android:background="@color/light_gray"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            />

        <TextView
            android:textStyle="bold"
            android:text="COMMANDS:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="italic"
            android:layout_marginTop="8dp"
            android:text="@string/nearby_what_was_that"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="4dp"
            android:text="WikiPod fetches articles of nearby locations."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:textStyle="italic"
            android:layout_marginTop="12dp"
            android:text="@string/dictate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="4dp"
            android:text="WikiPod reads whatever is on the screen, usually a list."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="italic"
            android:layout_marginTop="12dp"
            android:text="@string/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="4dp"
            android:text="WikiPod selects an item on the list."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
</ScrollView>
